syntax = "proto3";
package flux.users;

service UsersService {
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}

message GetUsersRequest {
    repeated string user_ids = 1;
}

message GetUsersResponse {
    repeated User users = 1;

    message User {
        optional string user_id = 1;
        optional string first_name = 2;
        optional string last_name = 3;
        optional string name = 4;
        optional string abbr = 5;
        optional string color = 6;
        optional string locale = 7;
    }
}
